--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ Alex Best's homepage
 
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="css/stackicons-social.css" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<!-- https://github.com/jpswalsh/academicons !!!!!!! -->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -59,8 +61,8 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 </div>
 <div class="panel-body">
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a name="paper-coleman-larger"></a>Explicit Coleman Integration in Larger Characteristic <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a> DOI: <a href="https://doi.org/10.2140/obs.2019.2.85">10.2140/obs.2019.2.85</a></li>
-        <li class="list-group-item"><a name="paper-zeta-larger"></a>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with <a href="http://math.mit.edu/~varul/">Vishal Arul</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://math.bu.edu/people/rmagner/">Richard Magner</a> and <a href="https://math.mit.edu/~ngtriant/">Nicholas Triantafillou</a>) <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a> DOI: <a href="https://doi.org/10.2140/obs.2019.2.37">10.2140/obs.2019.2.37</a></li>
+        <li class="list-group-item"><a name="paper-coleman-larger"></a>Explicit Coleman Integration in Larger Characteristic <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a> doi:<a href="https://doi.org/10.2140/obs.2019.2.85">10.2140/obs.2019.2.85</a></li>
+        <li class="list-group-item"><a name="paper-zeta-larger"></a>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with <a href="http://math.mit.edu/~varul/">Vishal Arul</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://math.bu.edu/people/rmagner/">Richard Magner</a> and <a href="https://math.mit.edu/~ngtriant/">Nicholas Triantafillou</a>) <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a> doi:<a href="https://doi.org/10.2140/obs.2019.2.37">10.2140/obs.2019.2.37</a></li>
     </ul>
 </div>
 </div>
@@ -70,17 +72,20 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Other Documents</h4>
 </div>
 <div class="panel-body">
-    <p>I took some fancy notes in <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, on Equidistribution in Number theory, check them out: <br />
-    <a href="equidistribution/equidistribution.html">Web notes on Equidistribution in Number theory</a><br />
-    <a href="equidistribution/equidistribution.pdf">Pdf notes on Equidistribution in Number theory,</a>
+    <p>Notes from <a href="https://sites.google.com/view/cmaistret/teaching#h.p_BYGoPzU848FJ">Céline Maistret's class</a>, on <b>Ranks and Parity of Ranks of Curves and Abelian Surfaces</b>: <br />
+        <a href="parity/parity.html">Web notes on Ranks and Parity of Ranks of Curves and Abelian Surfaces</a><br />
+        <a href="parity/parity.pdf">Pdf notes on Ranks and Parity of Ranks of Curves and Abelian Surfaces</a>
+    </p>
+    <p>Notes from <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, on <b>Equidistribution in Number theory</b>: <br />
+        <a href="equidistribution/equidistribution.html">Web notes on Equidistribution in Number theory</a><br />
+        <a href="equidistribution/equidistribution.pdf">Pdf notes on Equidistribution in Number theory</a>
+    </p>
+    <p>Notes from <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on <b>Automorphic forms and the Arthur-Selberg trace formula</b>:<br />
+        <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">Web notes on Automorphic forms and the Arthur-Selberg trace formula</a><br />
+        <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">Pdf notes on Automorphic forms and the Arthur-Selberg trace formula</a>
     </p>
     <p>
-    I also took notes in <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on Automorphic forms and the Arthur-Selberg trace formula:<br />
-    <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">Web notes on Automorphic forms and the Arthur-Selberg trace formula</a><br />
-    <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">Pdf notes on Automorphic forms and the Arthur-Selberg trace formula</a>
-    </p>
-    <p>
-    My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on Serre's conjecture</a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
+    My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on <b>Serre's conjecture</b></a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
     (<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
     <p>
     For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
@@ -115,7 +120,13 @@ Past:
 </div>
 <div class="panel-body">
 <p>
-Explicit Coleman Integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper above)</a> <a href="talks/coleman-harvey/slides_h.pdf">(slides)</a>
+    Explicit computation with Coleman integrals, Journées Arithmétiques XXXI 2/7/18 <a href="talks/journees/slides_h.pdf">(slides)</a>
+</p>
+<p>
+    Explicit computation with Coleman integrals,Boston University - Keio University workshop 27/6/18 <a href="talks/keio/slides_h.pdf">(slides)</a>
+</p>
+<p>
+    Explicit Coleman Integration in Larger Characteristic, ANTS XIII UW-Madison 17/7/18 <a href="#paper-coleman-larger">(paper above)</a> <a href="talks/coleman-harvey/slides_h.pdf">(slides)</a>
 </p>
 </div>
 </div>
@@ -164,6 +175,7 @@ Geometric approaches to solving Diophantine equations, at <a href="http://mathso
 <a class="st-icon-stackoverflow" href="http://stackexchange.com/users/1506678/alex?tab=accounts">Stackexchange</a>
 <a itemprop="sameAs" content="https://orcid.org/0000-0002-5741-674X" href="https://orcid.org/0000-0002-5741-674X" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon"></a>
 <!-- flickr, lastfm soundcloud ?? -->
+<!--<a class="" href="https://arxiv.org/a/0000-0002-5741-674X">arXiv</a>-->
 </div>
 </div>
 </div>
