--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 
 <title>
-Alex Best's homepage
+Alex J. Best's homepage
 </title>
 
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -37,7 +37,7 @@ Alex Best's homepage
 <h1>Hello world!</h1>
 <p>
 I am Alex, a fourth year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
-Previously I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the <a href="https://www.dpmms.cam.ac.uk/">Universities of Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
+Previously I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now. I would try to be more specific, but honestly there is just too much cool stuff out there.<br />
 My PhD supervisor is <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>.<br />
 Here is a picture of me.<br />
@@ -60,7 +60,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <h4>Seminars</h4>
 </div>
 <div class="panel-body">
-    I am running the <a href="buntes/index.html">BUNTES learning seminar this semester</a>: the topic is Abhyankar's conjecture.
+    I ran the <a href="buntes/index.html">BUNTES learning seminar last semester</a>: the topic was Abhyankar's conjecture.
 </div>
 </div>
 
@@ -71,6 +71,7 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 <div class="panel-body">
 Preprints:
     <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a name="paper-clusters"></a>A User's Guide to the Local Arithmetic of Hyperelliptic Curves (with L. Alexander Betts, Matthew Bisatt, Raymond van Bommel, Vladimir Dokchitser, Omri Faraggi, Sabrina Kunzweiler, Céline Maistret, Adam Morgan, Simone Muselli, and Sarah Nowell) <a knowl="papers/clusters-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/2007.01749">(arXiv)</a></li>
         <li class="list-group-item"><a name="paper-coleman-superelliptic"></a>Square root time Coleman integration on superelliptic curves <a knowl="papers/coleman-superelliptic-abstract.html">(abstract)</a> <a href="papers/coleman-superelliptic.pdf">(preprint)</a></li>
         <li class="list-group-item"><a name="paper-elliptic-good-reduction"></a>Elliptic curves with good reduction outside of the first six primes (with <a href="http://math.bu.edu/people/matschke/">Benjamin Matschke</a>) <a knowl="papers/good-reduction-abstract.html">(abstract)</a> <!--<a href="https://arxiv.org/abs/20????????">(arXiv)</a>--></li>
         <li class="list-group-item"><a name="paper-computing-modular-forms"></a>Computing classical modular forms (with <a href="https://people.maths.bris.ac.uk/~jb12407/">Jonathan Bober</a>, <a href="https://people.maths.bris.ac.uk/~maarb/">Andrew R. Booker</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://homepages.warwick.ac.uk/~masgaj/">John Cremona</a>, <a href="http://www.maartenderickx.nl/">Maarten Derickx</a>, <a href="https://davidlowryduda.com/">David Lowry-Duda</a>, <a href="https://people.maths.bris.ac.uk/~ml14850/">Min Lee</a>, <a href="http://math.mit.edu/~roed/">David Roe</a>, <a href="https://math.mit.edu/~drew/">Andrew V. Sutherland</a>, and <a href="https://math.dartmouth.edu/~jvoight/">John Voight</a>) <a knowl="papers/computing-modular-forms-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/2002.04717">(arXiv)</a></li>
@@ -85,30 +86,53 @@ Published:
 </div>
 
 <div class="panel panel-primary">
-<div class="panel-heading">
-<h4>Other Documents</h4>
+    <div class="panel-heading">
+        <h4>Other Documents</h4>
+    </div>
+    <div class="panel-body">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                Notes from <a href="https://sites.google.com/view/cmaistret/teaching#h.p_BYGoPzU848FJ">Céline Maistret's class</a>, on <i>Ranks and Parity of Ranks of Curves and Abelian Surfaces</i>: <br />
+                <a href="parity/parity.html">Web notes on Ranks and Parity of Ranks of Curves and Abelian Surfaces</a><br />
+                <a href="parity/parity.pdf">Pdf notes on Ranks and Parity of Ranks of Curves and Abelian Surfaces</a>
+            </li>
+            <li class="list-group-item">
+                Notes from <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, on <i>Equidistribution in Number theory</i>: <br />
+                <a href="equidistribution/equidistribution.html">Web notes on Equidistribution in Number theory</a><br />
+                <a href="equidistribution/equidistribution.pdf">Pdf notes on Equidistribution in Number theory</a>
+            </li>
+            <li class="list-group-item">
+                Notes from <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on <i>Automorphic forms and the Arthur-Selberg trace formula</i>:<br />
+                <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">Web notes on Automorphic forms and the Arthur-Selberg trace formula</a><br />
+                <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">Pdf notes on Automorphic forms and the Arthur-Selberg trace formula</a>
+            </li>
+            <li class="list-group-item">
+                My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on <i>Serre's conjecture</i></a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
+                (<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
+            </li>
+            <li class="list-group-item">
+                For (some old) lecture notes from my undergrad see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
+            </li>
+        </ul>
+    </div>
 </div>
-<div class="panel-body">
-    <p>Notes from <a href="https://sites.google.com/view/cmaistret/teaching#h.p_BYGoPzU848FJ">Céline Maistret's class</a>, on <i>Ranks and Parity of Ranks of Curves and Abelian Surfaces</i>: <br />
-        <a href="parity/parity.html">Web notes on Ranks and Parity of Ranks of Curves and Abelian Surfaces</a><br />
-        <a href="parity/parity.pdf">Pdf notes on Ranks and Parity of Ranks of Curves and Abelian Surfaces</a>
-    </p>
-    <p>Notes from <a href="http://math.bu.edu/people/saaltug/2018_3/2018_3_sem.html">Ali Altuğ's class</a>, on <i>Equidistribution in Number theory</i>: <br />
-        <a href="equidistribution/equidistribution.html">Web notes on Equidistribution in Number theory</a><br />
-        <a href="equidistribution/equidistribution.pdf">Pdf notes on Equidistribution in Number theory</a>
-    </p>
-    <p>Notes from <a href="http://math.bu.edu/people/saaltug/2018_1/2018_1_sem.html">Ali Altuğ's class</a> on <i>Automorphic forms and the Arthur-Selberg trace formula</i>:<br />
-        <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.html">Web notes on Automorphic forms and the Arthur-Selberg trace formula</a><br />
-        <a href="aut-forms-arthur-selberg/aut-forms-arthur-selberg.pdf">Pdf notes on Automorphic forms and the Arthur-Selberg trace formula</a>
-    </p>
-    <p>
-    My <a href="partiiiessay/essay.pdf" onClick="ga('send', 'event', 'download', 'click', 'Essay');">Part III Essay on <i>Serre's conjecture</i></a>; supervised by <a href="https://www.dpmms.cam.ac.uk/~jat58/">Jack Thorne</a>
-    (<a href="https://www.github.com/alexjbest/partiiiessay">source on GitHub</a>, comments welcome!)
-    <p>
-    For (some old) lecture notes see <a href="http://alexjbest.github.io/mjolnir/">Mjolnir</a>.
-    </p>
+
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <h4>Code</h4>
+    </div>
+    <div class="panel-body">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                A <a href="https://github.com/alexjbest/cluster-pictures">SageMath package for computing local invariants of hyperelliptic curves via cluster pictures</a> (with Raymond van Bommel) see <q>A User's Guide to the Local Arithmetic of Hyperelliptic Curves</q> above.
+            </li>
+            <li class="list-group-item">
+                A <a href="https://github.com/alexjbest/coleman.jl">Julia package for computing Coleman integrals on superelliptic curves</a> see <q>Square root time Coleman integration on superelliptic curves</q> above.
+            </li>
+        </ul>
+    </div>
 </div>
-</div>
+
 
 <div class="panel panel-primary">
 <div class="panel-heading">
