--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Alex J. Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, a fourth year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
+I am Alex, a fifth year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
 Previously I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now. I would try to be more specific, but honestly there is just too much cool stuff out there.<br />
 My PhD supervisor is <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>.<br />
@@ -44,6 +44,7 @@ Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
 If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
 </p>
+<p><b>I am on the academic job market this autumn/fall (2020)!</b></p>
 </div>
 <div class="col-sm-3">
 <img src="img/me2017.jpg" class="img-responsive img-rounded pull-right" alt="Picture of me">
@@ -161,6 +162,9 @@ Past:
 </div>
 <div class="panel-body">
 <p>
+    Computations with p-adic polylogarithms in SageMath, Global Virtual SageDays 109 27/5/20 <a href="talks/sage-computations-polylogs/slides_h.pdf">(slides)</a>
+</p>
+<p>
     Explicit computation with Coleman integrals, Journées Arithmétiques XXXI 2/7/19 <a href="talks/journees/slides_h.pdf">(slides)</a>
 </p>
 <p>
@@ -178,6 +182,8 @@ Past:
 </div>
 <div class="panel-body">
 <p>
+Rebuilding a topological hierarchy (in the Lean proof assistant), <a href="https://leanprover-community.github.io/lftcm2020/">LFTCM 2020</a> <a href="https://www.youtube.com/watch?v=RTfjSlwbKjQ">(video)</a>
+<br />
 The Kodaira-Parshin construction, <a href="http://math.mit.edu/nt/old/stage_f18.html">STAGE Fall 2018</a>
 <br />
 Quaternion Algebras, and Descent and Canonical Models <a href="http://math.bu.edu/people/midff/buntes/fall2018.html">BUNTES Fall 2018</a>
