--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@ Alex J. Best's homepage
 <div class="col-sm-8">
 <h1>Hello world!</h1>
 <p>
-I am Alex, a fifth year grad student at <a href="http://www.bu.edu/math/">Boston University</a>.
+I am Alex, I recently obtained my PhD from <a href="http://www.bu.edu/math/">Boston University</a>, and will soon be starting at <a href="https://www.vu.nl/en/">VU Amsterdam</a>.
 Previously I worked at <a href="https://www.mathematik.uni-kl.de/en/">TU Kaiserslautern</a> (on the <a href="http://mpir.org/">MPIR Library</a>), and studied at the Universities of <a href="https://www.dpmms.cam.ac.uk/">Cambridge</a> and <a href="http://www2.warwick.ac.uk/">Warwick</a>.<br />
 I am interested in many things, but mostly <a href="https://en.wikipedia.org/wiki/Number_theory">number theory</a> and related topics right now. I would try to be more specific, but honestly there is just too much cool stuff out there.<br />
-My PhD supervisor is <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>.<br />
+My PhD supervisor was <a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>.<br />
 Here is a picture of me.<br />
 And below are some things you might actually have come here looking for.<br />
 If you want to send me an email, go ahead! Just replace the .github.io part of this web address with @gmail.com.
@@ -57,21 +57,12 @@ If you want to send me an email, go ahead! Just replace the .github.io part of t
 
 <div class="panel panel-primary">
 <div class="panel-heading">
-<h4>Seminars</h4>
-</div>
-<div class="panel-body">
-    I ran the <a href="buntes/index.html">BUNTES learning seminar last semester</a>: the topic was Abhyankar's conjecture.
-</div>
-</div>
-
-<div class="panel panel-primary">
-<div class="panel-heading">
 <h4>Publications</h4>
 </div>
 <div class="panel-body">
 Preprints:
     <ul class="list-group list-group-flush">
-        <li class="list-group-item"><a name="paper-clusters"></a>A User's Guide to the Local Arithmetic of Hyperelliptic Curves (with L. Alexander Betts, Matthew Bisatt, Raymond van Bommel, Vladimir Dokchitser, Omri Faraggi, Sabrina Kunzweiler, Céline Maistret, Adam Morgan, Simone Muselli, and Sarah Nowell) <a knowl="papers/clusters-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/2007.01749">(arXiv)</a></li>
+        <li class="list-group-item"><a name="paper-clusters"></a>A User's Guide to the Local Arithmetic of Hyperelliptic Curves (with L. Alexander Betts, Matthew Bisatt, Raymond van Bommel, Vladimir Dokchitser, Omri Faraggi, Sabrina Kunzweiler, Céline Maistret, Adam Morgan, Simone Muselli, and Sarah Nowell), to appear  Bulletin of the London Mathematical Society Bulletin of the London Mathematical Society, <a knowl="papers/clusters-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/2007.01749">(arXiv)</a></li>
         <li class="list-group-item"><a name="paper-coleman-superelliptic"></a>Square root time Coleman integration on superelliptic curves <a knowl="papers/coleman-superelliptic-abstract.html">(abstract)</a> <a href="papers/coleman-superelliptic.pdf">(preprint)</a></li>
         <li class="list-group-item"><a name="paper-elliptic-good-reduction"></a>Elliptic curves with good reduction outside of the first six primes (with <a href="http://math.bu.edu/people/matschke/">Benjamin Matschke</a>) <a knowl="papers/good-reduction-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/2007.10535">(arXiv)</a></li>
         <li class="list-group-item"><a name="paper-computing-modular-forms"></a>Computing classical modular forms (with <a href="https://people.maths.bris.ac.uk/~jb12407/">Jonathan Bober</a>, <a href="https://people.maths.bris.ac.uk/~maarb/">Andrew R. Booker</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://homepages.warwick.ac.uk/~masgaj/">John Cremona</a>, <a href="http://www.maartenderickx.nl/">Maarten Derickx</a>, <a href="https://davidlowryduda.com/">David Lowry-Duda</a>, <a href="https://people.maths.bris.ac.uk/~ml14850/">Min Lee</a>, <a href="http://math.mit.edu/~roed/">David Roe</a>, <a href="https://math.mit.edu/~drew/">Andrew V. Sutherland</a>, and <a href="https://math.dartmouth.edu/~jvoight/">John Voight</a>) <a knowl="papers/computing-modular-forms-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/2002.04717">(arXiv)</a></li>
@@ -82,6 +73,15 @@ Published:
         <li class="list-group-item"><a name="paper-coleman-larger"></a>Explicit Coleman Integration in Larger Characteristic <a knowl="papers/explicit-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.03393">(arXiv)</a> doi:<a href="https://doi.org/10.2140/obs.2019.2.85">10.2140/obs.2019.2.85</a></li>
         <li class="list-group-item"><a name="paper-zeta-larger"></a>Computing Zeta Functions of Cyclic Covers in Large Characteristic (with <a href="http://math.mit.edu/~varul/">Vishal Arul</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://math.bu.edu/people/rmagner/">Richard Magner</a>, and <a href="https://ngtriant.github.io/">Nicholas Triantafillou</a>) <a knowl="papers/zeta-larger-abstract.html">(abstract)</a> <a href="https://arxiv.org/abs/1806.02262">(arXiv)</a> doi:<a href="https://doi.org/10.2140/obs.2019.2.37">10.2140/obs.2019.2.37</a></li>
     </ul>
+</div>
+</div>
+
+<div class="panel panel-primary">
+<div class="panel-heading">
+<h4>Seminars</h4>
+</div>
+<div class="panel-body">
+    I ran the <a href="buntes/index.html">BUNTES learning seminar in Spring 2020</a>: the topic was Abhyankar's conjecture.
 </div>
 </div>
 
